* Fix memory leak where on-demand registered RTD servers were not garbage collected after ServerTerminate().
* Change COM registrations (for RTD< ribbon and CTP) to always try machine hive first, before falling back to user hive.
* Allow byte[] as parameters key in ExcelRtdObservable, to support storing only an opaque hash instead of the full parameter set.

Version 0.32 (3 May 2014)
-------------------------
* BREAKING CHANGE: Modify rounding conversions for the integral parameter types to match VBA convention. Affects UInt16, Int16, Int32, Int64 and Boolean.
* Fix method registration to avoid generic methods (for F# standalone).
* Improve method deregistration to leave functions with #NAME? (thanks to kh).
* Add completion synchronization for multiple async functions in a formula.
* Disable IsExceptionSafe when there are DateTime parameters.
* Add RegisterMethods overload with explicit attributes.
* Implement exception-free checks for type compatibility in method registration.
* Add workaround for RTD disconnect bug in Excel 2010 RTM version.
* Restructure ExcelDnaUtil.WindowHandle and ExcelDnaUtil.Application to work better under Excel 2013.
* Fix ExcelDnaUtil.IsInFunctionWizard() under Excel 2013.
* Add support for Excel 2010+ native queued async functions.
* Add support for Excel 2010+ async calculation events.
* Raise maximum number of functions exported to 5000.
* Allow ExcelReference in object return values.
* Truncate strings for registration - long string caused registration to fail.
* Implement ExcelIntegration.RegisterDelegates.
* Implement RegistrationInfo access function.
* Add SuppressRegistration option to ExcelFunctionAttribute.
* Fix Unregister bug for direct-created RTD servers.
* Fix FreeMemory bug with uninitialized marshaler.
* Apply patch to be more tolerant of type loading errors.
* Change to stable ProgId (dependent on XllPath) for COM add-ins.
* Add ExcelIntegration.GetExportedAssemblies().
* Update async COM run check.